--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
+  },
+  "dependencies": {
+    "inputmask": "^5.0.7",
+    "jquery": "^3.6.0"
   }
 }
