--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "imagemin-webpack": "^5.1.1",
     "mini-css-extract-plugin": "^2.5.3",
     "node-sass": "^7.0.1",
+    "postcss-loader": "^6.2.1",
     "pug-html-loader": "^1.1.5",
     "sass-loader": "^12.6.0",
     "terser-webpack-plugin": "^5.3.1",
